[gd_scene load_steps=6 format=3 uid="uid://vka1n50y34gu"]

[ext_resource type="Script" uid="uid://c53l0htblg78d" path="res://Enemies/enemy0.gd" id="1_nb0lv"]

[sub_resource type="Resource" id="Resource_4adfi"]
metadata/__load_path__ = "res://models/enemy-flying.glb"

[sub_resource type="SphereShape3D" id="SphereShape3D_iix87"]
radius = 0.75

[sub_resource type="Resource" id="Resource_jwum2"]
metadata/__load_path__ = "res://sprites/burst_animation.tres"

[sub_resource type="Resource" id="Resource_8h0k6"]
metadata/__load_path__ = "res://sprites/burst_animation.tres"

[node name="enemy-flying" type="Area3D"]
script = ExtResource("1_nb0lv")
floating_distance = Vector2(10, 0)

[node name="enemy-flying" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("SphereShape3D_iix87")

[node name="RayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 5)

[node name="MuzzleA" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.45, 0.3, 0.4)
sprite_frames = SubResource("Resource_jwum2")
frame = 2

[node name="MuzzleB" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.45, 0.3, 0.4)
sprite_frames = SubResource("Resource_8h0k6")
frame = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
